add Invitation form

--- a/confirmation/src/main/resources/i18n/messages.properties
+++ b/confirmation/src/main/resources/i18n/messages.properties
@@ -5,7 +5,7 @@ error.status=Status:
 error.message=Message:
 
 # Activation email
-email.activation.title=confirmhip account activation is required
+email.activation.title=Audit account activation is required
 email.activation.greeting=Dear {0}
 email.activation.text1=Your confirmhip account has been created, please click on the URL below to activate it:
 email.activation.text2=Regards,
@@ -15,7 +15,10 @@ email.signature=confirmhip Team.
 email.creation.text1=Your confirmhip account has been created, please click on the URL below to access it:
 
 # Reset email
-email.reset.title=confirmhip password reset
+email.reset.title=Audit password reset
 email.reset.greeting=Dear {0}
 email.reset.text1=For your confirmhip account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
+
+email.invitation.title=Audit Invitation
+email.invitation.text=You were invited to join Audit project {0}. Click here to complete registration.
