--- a/confirmation/src/main/resources/i18n/messages_en.properties
+++ b/confirmation/src/main/resources/i18n/messages_en.properties
@@ -19,3 +19,7 @@ email.reset.title=confirmhip password reset
 email.reset.greeting=Dear {0}
 email.reset.text1=For your confirmhip account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
+
+
+email.invitation.title=Audit Invitation
+email.invitation.text=You were invited to join Audit project {0}. Click here to complete registration.
