--- a/confirmation/src/main/resources/i18n/messages_ru.properties
+++ b/confirmation/src/main/resources/i18n/messages_ru.properties
@@ -19,3 +19,7 @@ email.reset.title=confirmhip cброс пароля
 email.reset.greeting=Дорогой {0}
 email.reset.text1=Для вашего confirmhip аккаунта был запрошен cброс пароля, пожалуйста, нажмите на ссылку ниже для его cброса:
 email.reset.text2=С уважением,
+
+
+email.invitation.title=Audit Invitation
+email.invitation.text=You were invited to join Audit project {0}. Click here to complete registration.
