--- a/confirmation/src/main/resources/i18n/messages_ru.properties
+++ b/confirmation/src/main/resources/i18n/messages_ru.properties
@@ -5,19 +5,19 @@ error.status = Статус:
 error.message = Сообщение:
 
 # Activation email
-email.activation.title=confirmhip активация
+email.activation.title=Bewise активация
 email.activation.greeting=Дорогой {0}
-email.activation.text1=Ваш confirmhip аккаунт был создан, пожалуйста, нажмите на ссылку ниже для его активации:
+email.activation.text1=Ваш Bewise аккаунт был создан, пожалуйста, нажмите на ссылку ниже для его активации:
 email.activation.text2=С уважением,
-email.signature=confirmhip.
+email.signature=Bewise.
 
 # Creation email
-email.creation.text1=Ваш confirmhip аккаунт был создан, пожалуйста, нажмите на ссылку ниже для его активации:
+email.creation.text1=Ваш Bewise аккаунт был создан, пожалуйста, нажмите на ссылку ниже для его активации:
 
 # Reset email
-email.reset.title=confirmhip cброс пароля
+email.reset.title=Bewise cброс пароля
 email.reset.greeting=Дорогой {0}
-email.reset.text1=Для вашего confirmhip аккаунта был запрошен cброс пароля, пожалуйста, нажмите на ссылку ниже для его cброса:
+email.reset.text1=Для вашего Bewise аккаунта был запрошен cброс пароля, пожалуйста, нажмите на ссылку ниже для его cброса:
 email.reset.text2=С уважением,
 
 
