--- a/confirmation/src/main/resources/i18n/messages_en.properties
+++ b/confirmation/src/main/resources/i18n/messages_en.properties
@@ -5,19 +5,19 @@ error.status=Status:
 error.message=Message:
 
 # Activation email
-email.activation.title=confirmhip account activation
+email.activation.title=Bewise account activation
 email.activation.greeting=Dear {0}
-email.activation.text1=Your confirmhip account has been created, please click on the URL below to activate it:
+email.activation.text1=Your Bewise account has been created, please click on the URL below to activate it:
 email.activation.text2=Regards,
-email.signature=confirmhip Team.
+email.signature=Bewise Team.
 
 # Creation email
-email.creation.text1=Your confirmhip account has been created, please click on the URL below to access it:
+email.creation.text1=Your Bewise account has been created, please click on the URL below to access it:
 
 # Reset email
-email.reset.title=confirmhip password reset
+email.reset.title=Bewise password reset
 email.reset.greeting=Dear {0}
-email.reset.text1=For your confirmhip account a password reset was requested, please click on the URL below to reset it:
+email.reset.text1=For your Bewise account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
 
 
